--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
+TERM=202602
+CRNS=12345,67890
+POLL_SECONDS=10
+
+DISCORD_WEBHOOK_URL=
+EMAIL_SMTP_HOST=
+EMAIL_SMTP_PORT=587
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
+EMAIL_TO=
 
