--- a/.env
+++ b/.env
@@ -1,11 +1,14 @@
-TERM=202602
-CRNS=12345,67890
-POLL_SECONDS=10
+# Required
+TERM=202602                     # e.g., Spring 2026 (update each term)
+CRNS=28693,93228                # comma-separated list of CRNs to watch
+POLL_SECONDS=10                 # how often to check
 
+# Optional notifications (pick one or more)
 DISCORD_WEBHOOK_URL=
 EMAIL_SMTP_HOST=
 EMAIL_SMTP_PORT=587
 EMAIL_USERNAME=
 EMAIL_PASSWORD=
 EMAIL_TO=
+
 
